# magentic-starter

./: README.md  compose.yml
env/: db.example  one.example
one/: Dockerfile  magentic_one.py  main.py  pyproject.toml
one/src/: anthropic.py
