[project]
name = "magentic-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "anthropic>=0.49.0",
    "autogen-agentchat>=0.4.9.2",
    "autogen-ext[magentic-one]>=0.4.9.2",
    "playwright>=1.50.0",
    "tiktoken>=0.9.0",
]
